Intermittent crash when typing in Address Bar https://bugs.webkit.org/show_bug.cgi?id=116728 <rdar://problem/13976781>

Reviewed by Sam Weinig.

If a web process connection has been removed from the storage manager because we disconnected it
since there were no more active pages associated with the web process, we'll fail to find it here
so just return early instead of crashing.

* UIProcess/Storage/StorageManager.cpp:
(WebKit::StorageManager::destroyStorageMap):

Canonical link: https://commits.webkit.org/135027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150648 268f45cc-cd09-0410-ab3c-d52691b4dbfc